nx-libs (2:3.5.0.24-0x2go1) UNRELEASED; urgency=low

  * Clean up debian/patches/series: Remove commented out patches.
  * Make sure, patch 056_nx-X11-Werror-format-security.full.patch gets
    included into rolled tarball (by renaming *.patch to *.full.patch).
  * Debian lintian:
    + Fix: nx-libs source: not-binnmuable-all-depends-any x2goagent -> nxagent.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Tue, 06 May 2014 18:34:36 +0200

nx-libs (2:3.5.0.23-0x2go1) unstable; urgency=low

  [ Orion Poplawski ]
  * Add patch: 054_nx-X11_ppc64-ftbfs.full.patch. Fix FTBFS on ppc64
    architecture. (Fixes: #411).
  * Add patch: 055_nx-X11_imake-Werror-format-security.full.patch. Fix FTBFS
    of imake on current Fedora rawhide (21) which uses the compiler option
    -Werror=format-security for all builds. (Fixes: #412).
  * Add patch: 056_nx-X11-Werror-format-security.patch. Fix more
    -Werror=format-security errors that only show up on ARM builds. (Fixes:
    #423).
  * nx-libs.spec:
    - Sync nx-libs.spec in Fedora with upstream's nx-libs.spec file. (Fixes:
      #393).

  [ Mike Gabriel ]
  * debian/control:
    + Build our imake against x11proto-core-dev headers.
  * nx-libs.spec:
    + Build our imake against xorg-x11-proto-devel.

  [ Oleksandr Shneyder ]
  * Add patch: 205_nxagent_refresh-adsl.full.patch. Fix refresh error on RDP
    connections to Windows 2012 if speed=ADSL.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Tue, 06 May 2014 18:05:47 +0200

nx-libs (2:3.5.0.22-0x2go2) unstable; urgency=low

  * Update version in VERSION.x2goagent.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Sat, 04 Jan 2014 22:01:40 +0100

nx-libs (2:3.5.0.22-0x2go1) unstable; urgency=low

  [ Mirraz Mirraz ]
  * Add patch: 603_nx-X11_compilation_warnings.full.patch. Fix 3 evident bugs:
    one implicit function declaration issue and two array index out of bounds
    issues. (Fixes: #314).

  [ Mike Gabriel ]